# astrotool

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  bootstrap  configure
code/: CMakeLists.txt  CMakelists.txt  astrcplot.c  astrefcat.c  astrsolve.c  astrsolve.h  astrstats.c  catout.c  check.c  colour.c  cplot.c  crossid.c  crossmatch.c  define.h  dgeomap.c  fft.c  fft.h  fgroup.c  fgroup.h  field.c  field.h  fitswcs.c  header.c  main.c  main_mpi.c  main_openmp.c  makeit.c  match.c  match.h  misc.c  mosaic.c  photcplot.c  photsolve.c  photsolve.h  pqueue.c  prefs.c  prefs.h  printfits.c  proper.c  quadtree.c  (+8 more)
code/fits/: CMakeLists.txt
code/fitswcs/: CMakeLists.txt  fitswcs.h  wcscelsys.h
code/fitswcs/fits/: CMakeLists.txt
code/fitswcs/fits/.deps/: fitsbody.Po  fitscat.Po  fitscheck.Po  fitscleanup.Po  fitsconv.Po  fitshead.Po  fitskey.Po  fitsmisc.Po  fitsread.Po  fitstab.Po  fitsutil.Po  fitswrite.Po
code/fitswcs/wcs/: CMakeLists.txt
code/fitswcs/wcs/.deps/: cel.Po  lin.Po  poly.Po  proj.Po  sph.Po  tnx.Po  wcs.Po  wcstrig.Po
code/wcs/: CMakeLists.txt
tests/: step1.sh
