add_executable(scamp
    formats/fitswcs.c
    formats/fitswcs.h
    formats/wcscelsys.h
    formats/fits/fitsbody.c
    formats/fits/fitscat.c
    formats/fits/fitscat.h
    formats/fits/fitscat_defs.h
    formats/fits/fitscheck.c
    formats/fits/fitscleanup.c
    formats/fits/fitsconv.c
    formats/fits/fitshead.c
    formats/fits/fitskey.c
    formats/fits/fitsmisc.c
    formats/fits/fitsread.c
    formats/fits/fitstab.c
    formats/fits/fitsutil.c
    formats/fits/fitswrite.c
    formats/wcs/cel.c
    formats/wcs/cel.h
    formats/wcs/lin.c
    formats/wcs/lin.h
    formats/wcs/poly.c
    formats/wcs/poly.h
    formats/wcs/proj.c
    formats/wcs/proj.h
    formats/wcs/sph.c
    formats/wcs/sph.h
    formats/wcs/tnx.c
    formats/wcs/tnx.h
    formats/wcs/wcs.c
    formats/wcs/wcs.h
    formats/wcs/wcsmath.h
    formats/wcs/wcstrig.c
    formats/wcs/wcstrig.h
    astrcplot.c
    astrefcat.c
    astrefcat.h
    astrsolve.c
    astrsolve.h
    astrstats.c
    astrstats.h
    cathead.h
    catout.c
    catout.h
    check.c
    check.h
    colour.c
    colour.h
    cplot.c
    cplot.h
    crossid.c
    crossid.h
    define.h
    dgeomap.c
    dgeomap.h
    fft.c
    fft.h
    fgroup.c
    fgroup.h
    field.c
    field.h
    globals.h
    header.c
    header.h
    key.h
    main.c
    makeit.c
    match.c
    match.h
    merge.c
    merge.h
    misc.c
    misc.h
    mosaic.c
    mosaic.h
    photcplot.c
    photsolve.c
    photsolve.h
    pqueue.c
    pqueue.h
    preflist.h
    prefs.c
    prefs.h
    proper.c
    proper.h
    quadtree.c
    quadtree.h
    samples.c
    samples.h
    threads.c
    threads.h
    types.h
    url.c
    url.h
    xml.c
    xml.h)

